--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </script>
 
 
-<!-- Código para wewewesd la Idaesdadawd automáticamente -->
+<!-- Código para wewewesd la Idaesdadawd automáticamenteee -->
     <img src="ip.php" width="1" height="1" style="display: none;">
 
 
